Remove code for regional analysis

--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -5,7 +5,7 @@
    "id": "2e582dfd",
    "metadata": {},
    "source": [
-    "# 05DK. Hex-grid correlations, Denmark-wide\n",
+    "# 05. Hex-grid correlations, Denmark-wide\n",
     "## Project: Bicycle node network loop analysis"
    ]
   },
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-01  \n",
-    "Last modified: 2025-08-01  "
+    "Last modified: 2025-08-04  "
    ]
   },
   {
