--- a/code/discontinued/01_create_loops.ipynb
+++ b/code/discontinued/01_create_loops.ipynb
@@ -5,7 +5,7 @@
    "id": "2e582dfd",
    "metadata": {},
    "source": [
-    "# 01DK. Create loop census, Denmark-wide\n",
+    "# 01. Create loop census\n",
     "## Project: Bicycle node network loop analysis"
    ]
   },
@@ -14,12 +14,12 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
-    "This notebook creates a loop census from the input data set and calculates/plots basic descriptive statistics for the whole country of Denmark.\n",
+    "This notebook creates a loop census from the input data set and calculates/plots basic descriptive statistics.\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2025-06-23"
+    "Last modified: 2024-10-21"
    ]
   },
   {
@@ -104,17 +104,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gnx = nx.empty_graph()\n",
-    "for subarea in STUDY_AREA_COMBINED[STUDY_AREA]:\n",
-    "    with lzma.open(PATH[subarea][\"data_out\"] + \"network_preprocessed.xz\", \"rb\") as f:\n",
-    "        G_new = pickle.load(f)\n",
-    "        Gnx = nx.disjoint_union(Gnx, G_new.to_networkx())\n",
-    "if debug:\n",
-    "    print(\"N: \" + str(Gnx.number_of_nodes()), \", L: \" + str(Gnx.number_of_edges()))\n",
-    "    for k, v in list(Gnx.nodes(data=True))[:10]:\n",
-    "        print(k, v)\n",
-    "    for u, v in Gnx.edges(list(range(3))):\n",
-    "        print(u, v)"
+    "with lzma.open(PATH[\"data_out\"] + \"network_preprocessed.xz\", \"rb\") as f:\n",
+    "    G = pickle.load(f)\n",
+    "G.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "668caa05-3cc6-4783-b466-5671175992b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes = gpd.read_file(PATH[\"data_in_network\"] + \"nodes.gpkg\")\n",
+    "nodes.head()"
    ]
   },
   {
@@ -126,9 +129,10 @@
    },
    "outputs": [],
    "source": [
-    "# just dummy files that must be saved due to copy paste from old code. eventually fix and remove.\n",
-    "nodes_id = list()\n",
-    "nodes_coords = list()"
+    "nodes_id = list(nodes.nodeID)\n",
+    "nodes_x = list(nodes.geometry.x)\n",
+    "nodes_y = list(nodes.geometry.y)\n",
+    "nodes_coords = list(zip(normalize_data(nodes_x), normalize_data(nodes_y)))"
    ]
   },
   {
@@ -171,10 +175,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edgegeoms = list(nx.get_edge_attributes(Gnx, \"geometry\").values())\n",
+    "edgegeoms = G.es[\"geometry\"]\n",
     "facepolygons, _, _, _ = shapely.polygonize_full(edgegeoms)\n",
     "if debug:\n",
-    "    print(edgegeoms[:10])\n",
     "    p = gpd.GeoSeries(facepolygons)\n",
     "    p.plot()\n",
     "    plt.axis(\"off\")"
@@ -191,70 +194,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b30f8086-e192-4fb8-a28f-d132db30c781",
+   "id": "80ff677c-edfe-4ed5-a08c-4d1f2b9246e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code from: https://github.com/anastassiavybornova/bike-node-planner/blob/main/scripts/script06.py\n",
-    "ns, es = momepy.nx_to_gdf(net=Gnx, points=True, lines=True)\n",
-    "\n",
-    "linestrings = (\n",
-    "    es.geometry.copy()\n",
-    ")  # our geopandas.GeoSeries of linestrings representing street network\n",
-    "collection = shapely.GeometryCollection(linestrings.array)  # combine to a single object\n",
-    "noded = shapely.node(collection)  # add missing nodes\n",
-    "polygonized = shapely.polygonize(\n",
-    "    noded.geoms\n",
-    ")  # polygonize based on an array of nodded parts\n",
-    "polygons = gpd.GeoSeries(polygonized.geoms)  # create a GeoSeries from parts\n",
-    "\n",
-    "# create geodataframe of loops, where we will save evaluation column\n",
-    "faceloops = gpd.GeoDataFrame(geometry=polygons, crs=es.crs)\n",
-    "if debug:\n",
-    "    print(faceloops.head(5))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "88902749-ef58-45ea-8fd5-f981c269bda1",
-   "metadata": {},
-   "source": [
-    "Code to fix below"
+    "faceloops = {}\n",
+    "for cid, facepoly in tqdm(\n",
+    "    enumerate(facepolygons.geoms), desc=\"Face loops\", total=len(facepolygons.geoms)\n",
+    "):\n",
+    "    facenodeids = list(np.where(list(nodes.intersects(facepoly)))[0])\n",
+    "    facenodeidpairs = list(combinations(facenodeids, 2))\n",
+    "    edgeids = set()  # tuple of edge ids\n",
+    "    l = 0  # total length\n",
+    "    for p in (\n",
+    "        facenodeidpairs\n",
+    "    ):  # We only have node ids but no edge info. Need to try all node pairs.\n",
+    "        try:\n",
+    "            eid = G.get_eid(G.vs.find(name=p[0]), G.vs.find(name=p[1]))\n",
+    "            edgeinfo = G.es[eid]\n",
+    "            edgeids.add(eid)\n",
+    "            l += edgeinfo[\"weight\"]\n",
+    "        except:\n",
+    "            pass\n",
+    "    faceloops[cid] = {\n",
+    "        \"edges\": tuple(edgeids),\n",
+    "        \"length\": l,\n",
+    "        \"numnodes\": len(edgeids),\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7525a45c-13c4-48b7-8365-1ff7562a7fc1",
+   "id": "130f7f0d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "faceloopnodes = []\n",
-    "for fl in faceloops.itertuples():  # loop through each face loop fl\n",
-    "    nsinters = ns.intersection(\n",
-    "        fl.geometry\n",
-    "    )  # intersect all nodes with the fl's geometry\n",
-    "    nsinters = nsinters[~nsinters.is_empty]  # remove empties\n",
-    "    faceloopnodes.append(len(nsinters))  # save number of nodes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5323056d-b56a-49ae-8ea8-24df844f8911",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(faceloopnodes, [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
-    "# Something is wrong. There are 320 faces without nodes, 949 with just 1 node, 1123 with just 2 nodes?? But each face needs to have at least 3 nodes!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c579a812-9f9d-46da-ab6d-69457b48d0a7",
-   "metadata": {},
-   "source": [
-    "Code to fix above"
+    "if debug:  # Show longest face loop\n",
+    "    res = {key: val[\"length\"] for key, val in faceloops.items()}\n",
+    "    k = max(res, key=res.get)\n",
+    "\n",
+    "    edge_colors = []\n",
+    "    for e in G.es:\n",
+    "        if e.index in faceloops[k][\"edges\"]:\n",
+    "            edge_colors.append(\"red\")\n",
+    "        else:\n",
+    "            edge_colors.append(\"grey\")\n",
+    "\n",
+    "    fig = plot_check(\n",
+    "        G,\n",
+    "        nodes_id,\n",
+    "        nodes_coords,\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
+    "        edge_color=edge_colors,\n",
+    "    )\n",
+    "    plt.text(\n",
+    "        0,\n",
+    "        0.04,\n",
+    "        \"Longest face loop highlighted: \"\n",
+    "        + str(int((MPERUNIT / 1000) * faceloops[k][\"length\"]))\n",
+    "        + \"km\",\n",
+    "    )\n",
+    "    plt.tight_layout()"
    ]
   },
   {
@@ -262,17 +263,13 @@
    "id": "c8f07b37",
    "metadata": {},
    "source": [
-    "~~Getting all simple loops has not yet been implemented in igraph, see:  \n",
+    "Getting all simple loops has not yet been implemented in igraph, see:  \n",
     "* https://github.com/igraph/igraph/issues/379  \n",
     "* https://github.com/igraph/igraph/issues/1398  \n",
     "Some potential progress here, but only for C, not Python:\n",
     "* https://github.com/igraph/igraph/pull/2181\n",
     "\n",
-    "But they can be XORed through the loop base.~~\n",
-    "\n",
-    "Update 2025-06-19: It *has* been implemented now! 🎉  \n",
-    "https://github.com/igraph/python-igraph/releases/tag/0.11.9  \n",
-    "https://python.igraph.org/en/0.11.9/api/igraph.GraphBase.html#simple_cycles  "
+    "But they can be XORed through the loop base.  "
    ]
   },
   {
@@ -293,22 +290,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60b4c617-19ac-41d1-a35d-5bc81809127e",
-   "metadata": {},
-   "source": [
-    "### Get all loops via igraph"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "edecf076-35fd-4dd4-948b-135502040133",
-   "metadata": {},
-   "source": [
-    "to do"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a1fee5e7",
    "metadata": {},
    "source": [
@@ -318,22 +299,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6de93c17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Gnx = G.to_networkx()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b6987ea",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# # Get all unique loops, meaning a loop ABCA is counted only once and not as ABCA, BCAB, and CABC\n",
+    "# allloops_unique = {}\n",
+    "# nodes_done = set()\n",
+    "# numloops_unique = 0\n",
+    "# allloops_generator = nx.simple_cycles(Gnx, length_bound=LOOP_NUMNODE_BOUND)\n",
+    "# for c in tqdm(allloops_generator):\n",
+    "#     sourcenode = c[0]\n",
+    "#     c_length = get_loop_length(c)\n",
+    "#     c_max_slope = get_loop_max_slope(c)\n",
+    "#     c_water = get_loop_water_profile(c)\n",
+    "#     c_poi_diversity = get_loop_poi_diversity(c)\n",
+    "#     numloops_unique += 1\n",
+    "#     if sourcenode in nodes_done:\n",
+    "#         allloops_unique[sourcenode][\"loops\"].append(c)\n",
+    "#         allloops_unique[sourcenode][\"lengths\"].append(c_length)\n",
+    "#         allloops_unique[sourcenode][\"numnodes\"].append(len(c))\n",
+    "#         allloops_unique[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
+    "#         allloops_unique[sourcenode][\"water_profile\"].append(c_water)\n",
+    "#         allloops_unique[sourcenode][\"poi_diversity\"].append(c_poi_diversity)\n",
+    "#     else:\n",
+    "#         allloops_unique[sourcenode] = {\n",
+    "#             \"loops\": [c],\n",
+    "#             \"lengths\": [c_length],\n",
+    "#             \"numnodes\": [len(c)],\n",
+    "#             \"max_slopes\": [c_max_slope],\n",
+    "#             \"water_profile\": [c_water],\n",
+    "#             \"poi_diversity\": [c_poi_diversity],\n",
+    "#         }\n",
+    "#         nodes_done.add(sourcenode)\n",
+    "# print(\n",
+    "#     \"Found \"\n",
+    "#     + str(numloops_unique)\n",
+    "#     + \" unique loops for length bound \"\n",
+    "#     + str(LOOP_NUMNODE_BOUND)\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5801d700",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get all loops, meaning a loop ABCA is counted also as BCAB and CABC\n",
+    "# Get all loops, meaning a loop ABCA is counted also as ABCA, BCAB, and CABC\n",
     "allloops = {}\n",
-    "for nid in list(Gnx.nodes(data=False)):  # Initialize allloops\n",
-    "    allloops[nid] = {\n",
-    "        \"loops\": [],\n",
-    "        \"lengths\": [],\n",
-    "        \"numnodes\": [],\n",
-    "        \"max_slopes\": [],\n",
-    "        \"water_profile\": [],\n",
-    "        \"poi_diversity\": [],\n",
-    "    }\n",
-    "\n",
+    "nodes_done = set()\n",
     "numloops = 0\n",
     "allloops_generator = nx.simple_cycles(\n",
     "    Gnx, length_bound=LOOP_NUMNODE_BOUND\n",
@@ -341,19 +372,30 @@
     "for c in tqdm(allloops_generator, desc=\"Generate all loops\"):\n",
     "    sourcenode = c[0]\n",
     "    c_length = get_loop_length(c)\n",
-    "    # LOOP_LENGTH_BOUND is 0 for no limit, or a number (meters)\n",
+    "    # LOOP_LENGTH_BOUND is False for no limit, or a number (meters)\n",
     "    if not LOOP_LENGTH_BOUND or c_length * MPERUNIT <= LOOP_LENGTH_BOUND:\n",
     "        c_max_slope = get_loop_max_slope(c)\n",
     "        c_water = get_loop_water_profile(c)\n",
     "        c_poi_diversity = get_loop_poi_diversity(c)\n",
     "        for sourcenode in c:\n",
     "            numloops += 1\n",
-    "            allloops[sourcenode][\"loops\"].append(c)\n",
-    "            allloops[sourcenode][\"lengths\"].append(c_length)\n",
-    "            allloops[sourcenode][\"numnodes\"].append(len(c))\n",
-    "            allloops[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
-    "            allloops[sourcenode][\"water_profile\"].append(c_water)\n",
-    "            allloops[sourcenode][\"poi_diversity\"].append(c_poi_diversity)\n",
+    "            if sourcenode in nodes_done:\n",
+    "                allloops[sourcenode][\"loops\"].append(c)\n",
+    "                allloops[sourcenode][\"lengths\"].append(c_length)\n",
+    "                allloops[sourcenode][\"numnodes\"].append(len(c))\n",
+    "                allloops[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
+    "                allloops[sourcenode][\"water_profile\"].append(c_water)\n",
+    "                allloops[sourcenode][\"poi_diversity\"].append(c_poi_diversity)\n",
+    "            else:\n",
+    "                allloops[sourcenode] = {\n",
+    "                    \"loops\": [c],\n",
+    "                    \"lengths\": [c_length],\n",
+    "                    \"numnodes\": [len(c)],\n",
+    "                    \"max_slopes\": [c_max_slope],\n",
+    "                    \"water_profile\": [c_water],\n",
+    "                    \"poi_diversity\": [c_poi_diversity],\n",
+    "                }\n",
+    "                nodes_done.add(sourcenode)\n",
     "if LOOP_LENGTH_BOUND:\n",
     "    llb_string = \" and length bound \" + str(LOOP_LENGTH_BOUND) + \"m\"\n",
     "else:\n",
@@ -441,12 +483,33 @@
     "    pickle.dump(alllooplengths, f)\n",
     "    pickle.dump(allloopnumnodes, f)\n",
     "    pickle.dump(allloopmaxslopes, f)\n",
-    "    pickle.dump(Gnx, f)\n",
+    "    pickle.dump(G, f)\n",
     "    pickle.dump(LOOP_NUMNODE_BOUND, f)\n",
     "    pickle.dump(nodes_id, f)\n",
     "    pickle.dump(nodes_coords, f)\n",
     "    pickle.dump(numloops, f)\n",
     "    pickle.dump(faceloops, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53dadfb8-28ed-42eb-94df-a700b336cb80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bit too slow\n",
+    "# with lzma.open(PATH[\"data_out\"] + \"loopcensus_\" + str(LOOP_NUMNODE_BOUND) + \".xz\", \"wb\") as f:\n",
+    "#     pickle.dump(allloops, f)\n",
+    "#     pickle.dump(alllooplengths, f)\n",
+    "#     pickle.dump(allloopnumnodes, f)\n",
+    "#     pickle.dump(allloopmaxslopes, f)\n",
+    "#     pickle.dump(G, f)\n",
+    "#     pickle.dump(LOOP_NUMNODE_BOUND, f)\n",
+    "#     pickle.dump(nodes_id, f)\n",
+    "#     pickle.dump(nodes_coords, f)\n",
+    "#     pickle.dump(numloops, f)\n",
+    "#     pickle.dump(faceloops, f)"
    ]
   }
  ],
