Update todos in 03 and 05

--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -31,27 +31,9 @@
    "metadata": {},
    "source": [
     "## To do\n",
-    "- [X] Refactor with functions for restrictions\n",
+    "- [ ] Refactor with functions for restrictions (also 05)\n",
     "- [X] POI analysis\n",
     "- [X] Fix all same max ylim values at ~8000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e37a8962-c87e-49f4-b16a-8cc620114a2e",
-   "metadata": {},
-   "source": [
-    "## To do future notebooks/viz"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ebe47e89-ae8b-4262-8c2a-5048c5459403",
-   "metadata": {},
-   "source": [
-    "- [X] Polish nw plotting: colors, proj, transparency, keep values fixed\n",
-    "- [ ] Distribution/spatial clustering of slopes, pois in DK. How does it affect loops? Compare with random redistribution. Easy to add few POIS to dramatically increase coverage? \"identify/fix POI deserts\"\n",
-    "- [ ] Is node density a proxy for loop census size?"
    ]
   },
   {
