--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -35,7 +35,8 @@
    "id": "74a91d1c-1102-49bb-a970-699eeb062b58",
    "metadata": {},
    "source": [
-    "- [ ] Is node density a proxy for loop census size?"
+    "- [ ] Is node density a proxy for loop census size?\n",
+    "- [ ] Distribution/spatial clustering of slopes, pois in DK? How does it affect loops? Compare with random redistribution. Easy to add few POIS to dramatically increase coverage? \"identify/fix POI deserts\""
    ]
   },
   {
