Fix scipy.stats calls

--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -685,7 +685,7 @@
     "for i in range(len(xs)):\n",
     "    axes[i].scatter(xs[i], nodesh3[\"count\"], color=\"k\", alpha=0.1)\n",
     "\n",
-    "    res = stats.linregress(xs[i], nodesh3[\"count\"])\n",
+    "    res = scipy.stats.linregress(xs[i], nodesh3[\"count\"])\n",
     "    axes[i].plot(\n",
     "        xs[i],\n",
     "        res.slope * xs[i] + res.intercept,\n",
