Visualize better first row of correlations

--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -702,14 +702,13 @@
     "        axes[i].set_yticklabels([])\n",
     "\n",
     "    # https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.linregress.html\n",
-    "    tinv = lambda p, df: abs(scipy.stats.t.ppf(p / 2, df))\n",
     "    ts = tinv(0.05, len(xs[i]) - 2)\n",
     "    print(\n",
     "        f\"slope (95%): {res.slope:.3f} +/- {ts*res.stderr:.3f}, r-value: {res.rvalue:.3f}, p-value: {res.pvalue}\"\n",
     "    )\n",
     "    print(f\"intercept (95%): {res.intercept:.3f}\" f\" +/- {ts*res.intercept_stderr:.3f}\")\n",
     "\n",
-    "    confband(xs[i], nodesh3[\"count\"], axes[i])\n",
+    "    # confband(xs[i], nodesh3[\"count\"], axes[i]) # The confband doesn't add much value\n",
     "    axes[i].set_ylim([0, 23])\n",
     "    axes[i].set_xlim([-1, 18])"
    ]
@@ -748,7 +747,7 @@
     "            \"weight\": \"Length\",\n",
     "            \"max_slope\": \"Maximum gradient\",\n",
     "            \"has_water\": \"Has water\",\n",
-    "            \"poi_diversity\": \"POI Diversity\",\n",
+    "            \"poi_diversity\": \"POI diversity\",\n",
     "        }\n",
     "    )\n",
     ")\n",
@@ -782,12 +781,68 @@
     "            \"weight\": \"Length\",\n",
     "            \"max_slope\": \"Maximum gradient\",\n",
     "            \"has_water\": \"Has water\",\n",
-    "            \"poi_diversity\": \"POI Diversity\",\n",
+    "            \"poi_diversity\": \"POI diversity\",\n",
     "        }\n",
     "    )\n",
     ")\n",
     "\n",
     "pd.plotting.scatter_matrix(dfunified_properties_weighted, alpha=0.05, figsize=(10, 10));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fe0d313-f2db-46a5-af02-ae9c08d99458",
+   "metadata": {},
+   "source": [
+    "We care mostly about the first row. Visualize it better:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "294524fd-a0f2-47ee-a27a-6c73ab5ce27e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(nrows=1, ncols=4, figsize=(14, 3))\n",
+    "\n",
+    "y = nodesh3[\"count\"].to_list()\n",
+    "xlabels = [\"Length\", \"Maximum gradient\", \"Has water\", \"POI diversity\"]\n",
+    "\n",
+    "nonnanmask = ~np.isnan(dfunified_properties_weighted[xlabels[3]].to_list())\n",
+    "\n",
+    "for i in range(len(xlabels)):\n",
+    "    axes[i].scatter(\n",
+    "        dfunified_properties_weighted[xlabels[i]].to_list(), y, color=\"k\", alpha=0.1\n",
+    "    )\n",
+    "\n",
+    "    if i != 0:\n",
+    "        res = scipy.stats.linregress(\n",
+    "            np.array(dfunified_properties_weighted[xlabels[i]])[nonnanmask],\n",
+    "            np.array(y)[nonnanmask],\n",
+    "        )\n",
+    "        axes[i].plot(\n",
+    "            dfunified_properties_weighted[xlabels[i]],\n",
+    "            res.slope * dfunified_properties_weighted[xlabels[i]] + res.intercept,\n",
+    "            linewidth=2.5,\n",
+    "            color=\"b\",\n",
+    "        )\n",
+    "        # https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.linregress.html\n",
+    "        ts = tinv(0.05, len(np.array(y)[nonnanmask] - 2))\n",
+    "        print(\n",
+    "            f\"slope (95%): {res.slope:.3f} +/- {ts*res.stderr:.3f}, r-value: {res.rvalue:.3f}, p-value: {res.pvalue}\"\n",
+    "        )\n",
+    "        print(\n",
+    "            f\"intercept (95%): {res.intercept:.3f}\"\n",
+    "            f\" +/- {ts*res.intercept_stderr:.3f}\"\n",
+    "        )\n",
+    "\n",
+    "    if i == 0:\n",
+    "        axes[i].set_ylabel(\"Node density\")\n",
+    "    else:\n",
+    "        axes[i].set_yticklabels([])\n",
+    "    axes[i].set_xlabel(xlabels[i])\n",
+    "    axes[i].set_ylim([0, 23])"
    ]
   }
  ],
