Refactor with restrict_scenario

--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -397,16 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound = {}\n",
-    "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario lengths\"):\n",
-    "    try:\n",
-    "        lengths_this = allloops[sourcenode][\"lengths\"] * MPERUNIT\n",
-    "        mask_this = (lengths_this >= SCENARIO[SCENARIOID][\"looplength_min\"]) & (\n",
-    "            lengths_this <= SCENARIO[SCENARIOID][\"looplength_max\"]\n",
-    "        )\n",
-    "        allloops_bound[sourcenode] = mask_node(allloops[sourcenode], mask_this)\n",
-    "    except:  # Account for 0 loop nodes\n",
-    "        allloops_bound[sourcenode] = {}"
+    "allloops_bound = restrict_scenario(allloops, allloops, level=0)"
    ]
   },
   {
@@ -464,19 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound_sloped = {}\n",
-    "for sourcenode in tqdm(allloops_bound, desc=\"Restrict to scenario gradients\"):\n",
-    "    try:\n",
-    "        lengths_this = allloops[sourcenode][\"lengths\"] * MPERUNIT\n",
-    "        maxslopes_this = (\n",
-    "            allloops[sourcenode][\"max_slopes\"] / 100.0\n",
-    "        )  # max_slopes were multiplied by 100 for storage as uint16\n",
-    "        mask_this = lengths_this >= SCENARIO[SCENARIOID][\"looplength_min\"]\n",
-    "        mask_this &= lengths_this <= SCENARIO[SCENARIOID][\"looplength_max\"]\n",
-    "        mask_this &= maxslopes_this <= SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
-    "        allloops_bound_sloped[sourcenode] = mask_node(allloops[sourcenode], mask_this)\n",
-    "    except:  # Account for 0 loop nodes\n",
-    "        allloops_bound_sloped[sourcenode] = {}"
+    "allloops_bound_sloped = restrict_scenario(allloops, allloops_bound, level=1)"
    ]
   },
   {
@@ -515,33 +494,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound_sloped_watered = {}\n",
-    "for sourcenode in tqdm(allloops_bound_sloped, desc=\"Restrict to water limits\"):\n",
-    "    try:\n",
-    "        numloops = len(allloops_bound_sloped[sourcenode][\"loops\"])\n",
-    "        mask_this = [True] * numloops\n",
-    "        for i in range(numloops):\n",
-    "            wp = allloops_bound_sloped[sourcenode][\"water_profile\"][i]\n",
-    "            water_enough = True\n",
-    "            if wp:  # There is water on the way somewhere. Check distances\n",
-    "                for w in wp:\n",
-    "                    if w > WATERLENGTH_MAX:\n",
-    "                        water_enough = False\n",
-    "                        break\n",
-    "                if water_enough and (\n",
-    "                    allloops_bound_sloped[sourcenode][\"lengths\"][i] - wp[-1]\n",
-    "                    > WATERLENGTH_MAX\n",
-    "                ):\n",
-    "                    water_enough = False\n",
-    "            else:  # No water on the way, so the loop is only valid if short enough\n",
-    "                if allloops_bound_sloped[sourcenode][\"lengths\"][i] > WATERLENGTH_MAX:\n",
-    "                    water_enough = False\n",
-    "            mask_this[i] = water_enough\n",
-    "        allloops_bound_sloped_watered[sourcenode] = mask_node(\n",
-    "            allloops_bound_sloped[sourcenode], mask_this\n",
-    "        )\n",
-    "    except:  # Account for 0 loop nodes\n",
-    "        allloops_bound_sloped_watered[sourcenode] = {}"
+    "allloops_bound_sloped_watered = restrict_scenario(\n",
+    "    allloops, allloops_bound_sloped, level=2\n",
+    ")"
    ]
   },
   {
@@ -582,22 +537,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound_sloped_watered_diverse = {}\n",
-    "for sourcenode in tqdm(\n",
-    "    allloops_bound_sloped_watered, desc=\"Restrict with POI diversity\"\n",
-    "):\n",
-    "    try:\n",
-    "        numloops = len(allloops_bound_sloped_watered[sourcenode][\"loops\"])\n",
-    "        mask_this = [False] * numloops\n",
-    "        for i in range(numloops):\n",
-    "            poidiv = allloops_bound_sloped_watered[sourcenode][\"poi_diversity\"][i]\n",
-    "            if poidiv >= 3:\n",
-    "                mask_this[i] = True\n",
-    "        allloops_bound_sloped_watered_diverse[sourcenode] = mask_node(\n",
-    "            allloops_bound_sloped_watered[sourcenode], mask_this\n",
-    "        )\n",
-    "    except:  # Account for 0 loop nodes\n",
-    "        allloops_bound_sloped_watered_diverse[sourcenode] = {}"
+    "allloops_bound_sloped_watered_diverse = restrict_scenario(\n",
+    "    allloops, allloops_bound_sloped_watered, level=3\n",
+    ")"
    ]
   },
   {
